fix: parametrize log stacktrace

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ azurestorage.queues.transactionclosepayment.name=${TRANSACTION_CLOSE_PAYMENT_QUE
 azurestorage.queues.transactionnotificationrequested.name=${TRANSACTION_NOTIFICATIONS_QUEUE_NAME}
 
 spring.devtools.restart.enabled=false
-server.error.include-stacktrace=never
+server.error.include-stacktrace=${SERVER_ERROR_INCLUDE_STACKTRACE:never}
 
 payment.token.validity=${PAYMENT_TOKEN_VALIDITY_TIME}
 transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
