--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -104,8 +104,12 @@ microservice-chart:
     WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3111"
     LOGO_CARD_BRANDING_MAPPING: >
       { VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',  MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png', DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png', MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png', AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png', UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png' }
-
+    ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service
+    ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
+    ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
+    ELASTIC_APM_LOG_SENDING: 'true'
   envSecret:
+    ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
