fix: change get transaction circuit breaker

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,8 @@ resilience4j.circuitbreaker:
   instances:
     transactions-backend:
       baseConfig: default
-  instance:
-      node-backend:
-        baseConfig: default
+    node-backend:
+      baseConfig: default
+    ecommerce-db:
+      baseConfig: default
 
