fix: ignore test files for check pr size

--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -21,3 +21,4 @@ jobs:
         uses: pagopa/github-actions-template/check-pr-size@3fae741d94bcb9873f2447e95cc4ddea6f77be4d
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          ignored_files: 'src/test/'
