feat: added banner.txt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.redis.host=${REDIS_HOST}
+application.name=@project.artifactId@
+build.version=@project.version@
 spring.redis.password=${REDIS_PASSWORD}
 spring.redis.port=${REDIS_PORT}
 spring.redis.ssl=${REDIS_SSL_ENABLED}
