--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+application.name=@project.artifactId@
+build.version=@project.version@
 spring.redis.host=${REDIS_HOST}
 spring.redis.password=${REDIS_PASSWORD}
 spring.redis.port=${REDIS_PORT}
