--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-1551-add-payment-token-validity-time</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
