[CHK-1543] feat: update getTransactionInfo with additional info

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -634,6 +634,18 @@ components:
           properties:
             feeTotal:
               $ref: "#/components/schemas/AmountEuroCents"
+            paymentGateway:
+              type: string
+              example: 'XPAY'
+            sendPaymentResultOutcome:
+              type: string
+              enum:
+                - OK
+                - KO
+            authorizationCode:
+              type: string
+            authorizationErrorCode:
+              type: string
           required:
             - status
     AmountEuroCents:
