--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -89,10 +89,12 @@ stages:
         steps:
         - checkout: pagopaEcommerceLocal
         - script: |
-            ls
+            cat .env
         - script: | 
             echo "##[debug] Change placeholder for ecommerce-transaction-service set branch: $(BRANCH_NAME)"
             sed -i "s/^ECOMMERCE_TRANSACTIONS_COMMIT_SHA=.*$/ECOMMERCE_TRANSACTIONS_COMMIT_SHA=$(BRANCH_NAME)/" .env
+        - script: |
+            cat .env
           displayName: 'Change transaction branch name ecommerce-local .env'
         - script: docker-compose up --scale mongo-express=0 --scale redis-insight=0 --scale pagopa-notifications-service=0 -d
           displayName: 'Run app with docker-compose'
