--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>0.16.2</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>0.17.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
+        <elastic-apm.version>1.38.0</elastic-apm.version>
     </properties>
     <dependencies>
         <dependency>
@@ -203,6 +204,11 @@
             <artifactId>netty-resolver-dns-native-macos</artifactId>
             <version>4.1.82.Final</version>
             <classifier>osx-aarch_64</classifier>
+        </dependency>
+        <dependency>
+            <groupId>co.elastic.apm</groupId>
+            <artifactId>apm-agent-api</artifactId>
+            <version>${elastic-apm.version}</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
