--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -109,6 +109,7 @@ microservice-chart:
     ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
     ELASTIC_APM_LOG_SENDING: 'true'
+    ELASTIC_APM_TRANSACTION_SAMPLE_RATE: "1"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
