feat(tracing): set Elastic APM agent logging level to DEBUG

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -110,6 +110,7 @@ microservice-chart:
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
     ELASTIC_APM_LOG_SENDING: 'true'
     ELASTIC_APM_TRANSACTION_SAMPLE_RATE: "1"
+    ELASTIC_APM_LOG_LEVEL: "DEBUG"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
