fix: add NOT_RECEIVED into openapi spec

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -651,6 +651,7 @@ components:
               enum:
                 - OK
                 - KO
+                - NOT_RECEIVED
             authorizationCode:
               type: string
             authorizationErrorCode:
