--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -13,6 +13,7 @@ nodoPerPM.connectionTimeout=10000
 ecommercePaymentInstruments.uri=https://localhost/nodo
 ecommercePaymentInstruments.readTimeout=10000
 ecommercePaymentInstruments.connectionTimeout=10000
+ecommercePaymentInstruments.apiKey=payment-method-api-key
 
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
