--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=key
 ECOMMERCE_PAYMENT_INSTRUMENTS_URI="http://pagopa-ecommerce-payment-methods-service:8080"
 ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT=10000
+ECOMMERCE_PAYMENT_INSTRUMENTS_APY_KEY=payment-method-api-key
 
 SPRING_MAX_IN_MEM_SIZE=16777216
 
