--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -119,6 +119,7 @@ microservice-chart:
     JWT_SECRET: sessions-jwt-secret
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
+    ECOMMERCE_PAYMENT_INSTRUMENTS_APY_KEY: payment-method-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
