--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ paymentTransactionsGateway.apiKey=${PAYMENT_TRANSACTIONS_GATEWAY_API_KEY}
 ecommercePaymentInstruments.uri=${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}
 ecommercePaymentInstruments.readTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT}
 ecommercePaymentInstruments.connectionTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT}
+ecommercePaymentInstruments.apiKey=${ECOMMERCE_PAYMENT_INSTRUMENTS_APY_KEY}
 
 notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
