feat(queue): parameterize event TTL per queue

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -39,10 +39,15 @@ microservice-chart:
       NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
       NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
       TRANSACTION_EXPIRATION_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-expiration-queue
+      TRANSACTION_EXPIRATION_QUEUE_TTL_MINUTES: "43200"
       TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-retry-queue
+      TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_TTL_MINUTES: "43200"
       TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue
+      TRANSACTION_CLOSE_PAYMENT_QUEUE_TTL_MINUTES: "43200"
       TRANSACTION_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
+      TRANSACTION_REFUND_QUEUE_TTL_MINUTES: "43200"
       TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
+      TRANSACTION_NOTIFICATIONS_QUEUE_TTL_MINUTES: "43200"
       PAYMENT_TOKEN_VALIDITY_TIME: "900"
       TRANSACTIONS_RETRY_OFFSET: "60"
       CLOSURE_RETRY_INTERVAL: "30"
@@ -148,10 +153,15 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
     TRANSACTION_EXPIRATION_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-expiration-queue
+    TRANSACTION_EXPIRATION_QUEUE_TTL_MINUTES: "43200"
     TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-retry-queue
+    TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_TTL_MINUTES: "43200"
     TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue
+    TRANSACTION_CLOSE_PAYMENT_QUEUE_TTL_MINUTES: "43200"
     TRANSACTION_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
+    TRANSACTION_REFUND_QUEUE_TTL_MINUTES: "43200"
     TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
+    TRANSACTION_NOTIFICATIONS_QUEUE_TTL_MINUTES: "43200"
     PAYMENT_TOKEN_VALIDITY_TIME: "900"
     TRANSACTIONS_RETRY_OFFSET: "60"
     CLOSURE_RETRY_INTERVAL: "30"
