fix: refactoring to one env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,15 +40,11 @@ management.health.circuitbreakers.enabled=true
 
 azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
 azurestorage.queues.transactionexpiration.name=${TRANSACTION_EXPIRATION_QUEUE_NAME}
-azurestorage.queues.transactionexpiration.ttlMinutes=${TRANSACTION_EXPIRATION_QUEUE_TTL_MINUTES:10080}
 azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
-azurestorage.queues.transactionrefund.ttlMinutes=${TRANSACTION_REFUND_QUEUE_TTL_MINUTES:10080}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
-azurestorage.queues.transactionclosepaymentretry.ttlMinutes=${TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_TTL_MINUTES:10080}
 azurestorage.queues.transactionclosepayment.name=${TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME}
-azurestorage.queues.transactionclosepayment.ttlMinutes=${TRANSACTION_CLOSE_PAYMENT_QUEUE_TTL_MINUTES:10080}
 azurestorage.queues.transactionnotificationrequested.name=${TRANSACTION_NOTIFICATIONS_QUEUE_NAME}
-azurestorage.queues.transactionnotificationrequested.ttlMinutes=${TRANSACTION_NOTIFICATIONS_QUEUE_TTL_MINUTES:10080}
+azurestorage.queues.transientQueues.ttlMinutes=${TRANSIENT_QUEUES_TTL_MINUTES:10080}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=${SERVER_ERROR_INCLUDE_STACKTRACE:never}
