--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
 
-azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
+azurestorage.connectionstringtransient=${ECOMMERCE_STORAGE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.transactionexpiration.name=${TRANSACTION_EXPIRATION_QUEUE_NAME}
 azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
