--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -168,6 +168,7 @@ microservice-chart:
     ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
     ELASTIC_APM_LOG_SENDING: 'true'
+    ELASTIC_APM_TRACE_CONTINUATION_STRATEGY: "restart_external"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
