feat: add service environment

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -59,6 +59,8 @@ microservice-chart:
       ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
       ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
       ELASTIC_APM_LOG_SENDING: "false"
+      ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
+      ECS_SERVICE_ENVIRONMENT: "uat"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -168,6 +170,8 @@ microservice-chart:
     ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
     ELASTIC_APM_LOG_SENDING: "false"
+    ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service
+    ECS_SERVICE_ENVIRONMENT: "uat"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
