feat(logging): formatting log in ecs json format (#255)
* feat(logging): formatting log in ecs json format

* fix: delete old logback conf file

* fix: add service name and service version to ecs logger

* fix(apm): disable log sending

* feat: add service environment

* fix: removed unused method

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -58,7 +58,9 @@ microservice-chart:
       ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
       ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
       ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
-      ELASTIC_APM_LOG_SENDING: 'true'
+      ELASTIC_APM_LOG_SENDING: "false"
+      ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
+      ECS_SERVICE_ENVIRONMENT: "prod"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -167,7 +169,9 @@ microservice-chart:
     ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service
     ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
-    ELASTIC_APM_LOG_SENDING: 'true'
+    ELASTIC_APM_LOG_SENDING: "false"
+    ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service
+    ECS_SERVICE_ENVIRONMENT: "prod"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
