--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -108,7 +108,9 @@ microservice-chart:
     ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service
     ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
     ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
-    ELASTIC_APM_LOG_SENDING: 'true'
+    ELASTIC_APM_LOG_SENDING: "false"
+    ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service
+    ECS_SERVICE_ENVIRONMENT: "dev"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
