--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -56,10 +56,12 @@ microservice-chart:
         { VISA:'https://checkout.pagopa.it/assets/creditcard/carta_visa.png',  MASTERCARD:'https://checkout.pagopa.it/assets/creditcard/carta_mc.png', DINERS:'https://checkout.pagopa.it/assets/creditcard/carta_diners.png', MAESTRO:'https://checkout.pagopa.it/assets/creditcard/carta_maestro.png', AMEX:'https://checkout.pagopa.it/assets/creditcard/carta_amex.png', UNKNOWN:'https://checkout.pagopa.it/assets/creditcard/generic.png' }
 
       SERVER_ERROR_INCLUDE_STACKTRACE: "never"
-      ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
-      ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
-      ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
-      ELASTIC_APM_LOG_SENDING: "false"
+      OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service-blue,deployment.environment=prod"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
+      OTEL_TRACES_EXPORTER: otlp
+      OTEL_METRICS_EXPORTER: otlp
+      OTEL_LOGS_EXPORTER: none
+      OTEL_TRACES_SAMPLER: "always_on"
       ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
       ECS_SERVICE_ENVIRONMENT: "prod"
     envSecret:
@@ -69,7 +71,7 @@ microservice-chart:
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
       JWT_SECRET: sessions-jwt-secret
       PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
-      ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
+      OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
       ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
   image:
     repository: pagopapcommonacr.azurecr.io/pagopaecommercetransactionsservice
@@ -168,10 +170,12 @@ microservice-chart:
       { VISA:'https://checkout.pagopa.it/assets/creditcard/carta_visa.png',  MASTERCARD:'https://checkout.pagopa.it/assets/creditcard/carta_mc.png', DINERS:'https://checkout.pagopa.it/assets/creditcard/carta_diners.png', MAESTRO:'https://checkout.pagopa.it/assets/creditcard/carta_maestro.png', AMEX:'https://checkout.pagopa.it/assets/creditcard/carta_amex.png', UNKNOWN:'https://checkout.pagopa.it/assets/creditcard/generic.png' }
 
     SERVER_ERROR_INCLUDE_STACKTRACE: "never"
-    ELASTIC_APM_SERVICE_NAME: pagopa-ecommerce-transactions-service
-    ELASTIC_APM_APPLICATION_PACKAGES: it.pagopa.ecommerce.transactions
-    ELASTIC_APM_SERVER_URL: http://quickstart-apm-http.elastic-system.svc:8200
-    ELASTIC_APM_LOG_SENDING: "false"
+    OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service,deployment.environment=prod"
+    OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
+    OTEL_TRACES_EXPORTER: otlp
+    OTEL_METRICS_EXPORTER: otlp
+    OTEL_LOGS_EXPORTER: none
+    OTEL_TRACES_SAMPLER: "always_on"
     ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service
     ECS_SERVICE_ENVIRONMENT: "prod"
   envSecret:
@@ -183,7 +187,7 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_SECRET: sessions-jwt-secret
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
-    ELASTIC_APM_SECRET_TOKEN: elastic-apm-secret-token
+    OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
   keyvault:
     name: "pagopa-p-ecommerce-kv"
