--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -430,7 +430,7 @@ stages:
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         eq(${{parameters.PROD_SKIP_BLUE_DEPLOYMENT}}, False),
-        in(dependencies.Build_PROD_Blue.result, 'Succeeded'),
+        eq(dependencies.Build_PROD_Blue.result, 'Succeeded'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
