--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -391,7 +391,7 @@ stages:
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         eq(${{parameters.PROD_SKIP_BLUE_DEPLOYMENT}}, False),
-        in(dependencies.Prod_WaitForApproval.result, 'Succeeded'),
+        eq(dependencies.Prod_WaitForApproval.result, 'Succeeded'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped')
       )
     variables:
