--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"12345678912\",\"password\":\"password\"}"
 NODO_PARALLEL_REQUESTS=5
+NODO_ALL_CCP_ON_TRANSFER_IBAN=false
 
 PAYMENT_TRANSACTIONS_GATEWAY_URI="http://pagopa-ecommerce-traefik/transactions-gateway"
 PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
