add helm variable and test

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -143,6 +143,7 @@ microservice-chart:
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     NODO_PARALLEL_REQUESTS: "5"
+    NODO_ALL_CCP_ON_TRANSFER_IBAN: "false"
     ECOMMERCE_PAYMENT_METHODS_URI: https://api.platform.pagopa.it/ecommerce/payment-methods-service/v1
     ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
