rename var lightallccp to allCCPOnTransferIbanEnabled

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -5,7 +5,7 @@ nodo.connectionTimeout=10000
 nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 nodo.parallelRequests=5
-nodo.lightAllCCPCheck=true
+nodo.allCCPOnTransferIbanEnabled=true
 
 nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
