--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
             <version>12.14.0</version>
         </dependency>
         <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-core-serializer-json-jackson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
         </dependency>
